--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli-html-minifier",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Uses html-minifier to minify your ember-cli app's html as well as any inline js/css",
   "main": "index.js",
   "author": "Garth Poitras <garth22@gmail.com> (http://garthpoitras.com/)",
@@ -16,11 +16,16 @@
     "html",
     "html-minifier"
   ],
+  "ember-addon": {
+    "after": [
+      "ember-cli-fastboot"
+    ]
+  },
   "dependencies": {
     "broccoli-filter": "^0.1.10",
     "broccoli-funnel": "^0.1.6",
     "broccoli-merge-trees": "^0.2.1",
-    "html-minifier": "^1.0.0",
+    "html-minifier": "^3.0.1",
     "util-extend": "^1.0.1"
   }
 }
