--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ember-cli-html-minifier",
-  "version": "0.2.1",
+  "version": "1.0.0",
   "description": "Uses html-minifier to minify your ember-cli app's html as well as any inline js/css",
   "main": "index.js",
-  "author": "Garth Poitras <garth22@gmail.com> (http://garthpoitras.com/)",
+  "author": "Garth Poitras <garth22@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git@github.com:gdub22/ember-cli-html-minifier.git"
+    "url": "git@github.com:gpoitch/ember-cli-html-minifier.git"
   },
   "keywords": [
     "ember-addon",
