--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "minify",
     "compress",
     "html",
-    "html-minifier"
+    "html-minifier-terser"
   ],
   "ember-addon": {
     "after": [
@@ -25,7 +25,7 @@
     "broccoli-filter": "^1.3.0",
     "broccoli-funnel": "^2.0.1",
     "broccoli-merge-trees": "^3.0.1",
-    "html-minifier": "^3.5.20",
+    "html-minifier-terser": "^5.0.2",
     "util-extend": "^1.0.3"
   }
 }
